# MemIndex

./: .gitignore  pyproject.toml
BoolQuestion_LLM_Test/: README.md  batch_runner.py  boolq_evaluator.py  config.py  main.py
BoolQuestion_LLM_Test/i18n/: __init__.py  translations.py
BoolQuestion_LLM_Test/llm_client/: __init__.py  base.py  litellm_client.py  vertex_client.py
BoolQuestion_LLM_Test/outputs/: gpt-4o_direct_direct_20251203_185316_f0851aa0.jsonl
BoolQuestion_LLM_Test/prompt_manager/: __init__.py  prompt_manager.py  prompts.yaml
BoolQuestion_LLM_Test/tests/: __init__.py  test_dataset_manager.py  test_llm_client.py  test_models.py  test_prompt_manager.py  test_response_parser.py  test_utils.py
BoolQuestion_LLM_Test/tools/: __init__.py  plot_results.py
BoolQuestion_LLM_Test/utils/: __init__.py  dataset_manager.py  logger.py  models_utils.py  response_parser.py  utils.py
MemIndex/: README.md  __init__.py  batch_config.example.yaml  batch_main.py  config.yaml  main.py  running_config.example.yaml
MemIndex/components/: __init__.py
MemIndex/components/agents/: __init__.py  (+6 more)
MemIndex/config/: __init__.py  batch_config.py  config.py  running_config.py
MemIndex/core/: __init__.py  actuator.py  report.py  runner.py
MemIndex/prompts/: __init__.py  prompt_manager.py  prompts.yaml
MemIndex/utils/: __init__.py  controller.py  data_loader.py  dataset_compiler.py  litellm_controller.py  logging.py  nonsense_generator.py  prompt_checker.py  report_viewer.py  score_scatter_plot.py  task_display.py
documentation/paper/: .latexmkrc  IEEEtran.cls  main.tex
(+451 files in other folders)
